About album header, SVG layout bug fix 1.

--- a/about/about.css
+++ b/about/about.css
@@ -88,6 +88,17 @@ body {
   scrollbar-width: none;
 }
 
+.row {
+  width: 100%;
+  height: 100%;
+  scroll-snap-align: start;
+  scroll-snap-type: x mandatory;
+  display: flex;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+}
+
 .vp {
   width: 100%;
   height: 100%;
